--- a/GallupDataCleaning.ipynb
+++ b/GallupDataCleaning.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -284,14 +284,14 @@
        "<caption>A tibble: 6 × 16</caption>\n",
        "<thead>\n",
        "\t<tr><th scope=col>COUNTRYNEW</th><th scope=col>COUNTRY_ISO3</th><th scope=col>WGT</th><th scope=col>FIELD_DATE</th><th scope=col>YEAR_WAVE</th><th scope=col>YEAR_CALENDAR</th><th scope=col>ls</th><th scope=col>hope</th><th scope=col>smile</th><th scope=col>enjoy</th><th scope=col>worry</th><th scope=col>sad</th><th scope=col>stress</th><th scope=col>anger</th><th scope=col>pa</th><th scope=col>na</th></tr>\n",
-       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>United States</td><td>USA</td><td>0.6689163</td><td>7/1/2006</td><td>2006</td><td>2006</td><td> 6</td><td> 8</td><td>1</td><td>1</td><td>2</td><td>2</td><td>2</td><td>2</td><td>1</td><td>2.0</td></tr>\n",
-       "\t<tr><td>United States</td><td>USA</td><td>0.1966555</td><td>7/1/2006</td><td>2006</td><td>2006</td><td> 8</td><td>NA</td><td>1</td><td>1</td><td>2</td><td>2</td><td>2</td><td>2</td><td>1</td><td>2.0</td></tr>\n",
-       "\t<tr><td>United States</td><td>USA</td><td>1.3032635</td><td>7/1/2006</td><td>2006</td><td>2006</td><td> 8</td><td> 8</td><td>1</td><td>1</td><td>1</td><td>2</td><td>1</td><td>2</td><td>1</td><td>1.5</td></tr>\n",
-       "\t<tr><td>United States</td><td>USA</td><td>0.6359364</td><td>7/1/2006</td><td>2006</td><td>2006</td><td> 8</td><td> 8</td><td>1</td><td>1</td><td>2</td><td>2</td><td>2</td><td>2</td><td>1</td><td>2.0</td></tr>\n",
-       "\t<tr><td>United States</td><td>USA</td><td>0.7358092</td><td>7/1/2006</td><td>2006</td><td>2006</td><td>10</td><td>10</td><td>1</td><td>1</td><td>2</td><td>2</td><td>2</td><td>2</td><td>1</td><td>2.0</td></tr>\n",
+       "\t<tr><td>United States</td><td>USA</td><td>0.6689163</td><td>7/1/2006</td><td>2006</td><td>2006</td><td> 6</td><td> 8</td><td>1</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0.0</td></tr>\n",
+       "\t<tr><td>United States</td><td>USA</td><td>0.1966555</td><td>7/1/2006</td><td>2006</td><td>2006</td><td> 8</td><td>NA</td><td>1</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0.0</td></tr>\n",
+       "\t<tr><td>United States</td><td>USA</td><td>1.3032635</td><td>7/1/2006</td><td>2006</td><td>2006</td><td> 8</td><td> 8</td><td>1</td><td>1</td><td>1</td><td>0</td><td>1</td><td>0</td><td>1</td><td>0.5</td></tr>\n",
+       "\t<tr><td>United States</td><td>USA</td><td>0.6359364</td><td>7/1/2006</td><td>2006</td><td>2006</td><td> 8</td><td> 8</td><td>1</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0.0</td></tr>\n",
+       "\t<tr><td>United States</td><td>USA</td><td>0.7358092</td><td>7/1/2006</td><td>2006</td><td>2006</td><td>10</td><td>10</td><td>1</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0.0</td></tr>\n",
        "\t<tr><td>United States</td><td>USA</td><td>1.7369582</td><td>7/1/2006</td><td>2006</td><td>2006</td><td> 5</td><td>10</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1.0</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
@@ -300,13 +300,13 @@
        "A tibble: 6 × 16\n",
        "\\begin{tabular}{llllllllllllllll}\n",
        " COUNTRYNEW & COUNTRY\\_ISO3 & WGT & FIELD\\_DATE & YEAR\\_WAVE & YEAR\\_CALENDAR & ls & hope & smile & enjoy & worry & sad & stress & anger & pa & na\\\\\n",
-       " <chr> & <chr> & <dbl> & <chr> & <int> & <int> & <int> & <int> & <int> & <int> & <int> & <int> & <int> & <int> & <dbl> & <dbl>\\\\\n",
+       " <chr> & <chr> & <dbl> & <chr> & <int> & <int> & <int> & <int> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t United States & USA & 0.6689163 & 7/1/2006 & 2006 & 2006 &  6 &  8 & 1 & 1 & 2 & 2 & 2 & 2 & 1 & 2.0\\\\\n",
-       "\t United States & USA & 0.1966555 & 7/1/2006 & 2006 & 2006 &  8 & NA & 1 & 1 & 2 & 2 & 2 & 2 & 1 & 2.0\\\\\n",
-       "\t United States & USA & 1.3032635 & 7/1/2006 & 2006 & 2006 &  8 &  8 & 1 & 1 & 1 & 2 & 1 & 2 & 1 & 1.5\\\\\n",
-       "\t United States & USA & 0.6359364 & 7/1/2006 & 2006 & 2006 &  8 &  8 & 1 & 1 & 2 & 2 & 2 & 2 & 1 & 2.0\\\\\n",
-       "\t United States & USA & 0.7358092 & 7/1/2006 & 2006 & 2006 & 10 & 10 & 1 & 1 & 2 & 2 & 2 & 2 & 1 & 2.0\\\\\n",
+       "\t United States & USA & 0.6689163 & 7/1/2006 & 2006 & 2006 &  6 &  8 & 1 & 1 & 0 & 0 & 0 & 0 & 1 & 0.0\\\\\n",
+       "\t United States & USA & 0.1966555 & 7/1/2006 & 2006 & 2006 &  8 & NA & 1 & 1 & 0 & 0 & 0 & 0 & 1 & 0.0\\\\\n",
+       "\t United States & USA & 1.3032635 & 7/1/2006 & 2006 & 2006 &  8 &  8 & 1 & 1 & 1 & 0 & 1 & 0 & 1 & 0.5\\\\\n",
+       "\t United States & USA & 0.6359364 & 7/1/2006 & 2006 & 2006 &  8 &  8 & 1 & 1 & 0 & 0 & 0 & 0 & 1 & 0.0\\\\\n",
+       "\t United States & USA & 0.7358092 & 7/1/2006 & 2006 & 2006 & 10 & 10 & 1 & 1 & 0 & 0 & 0 & 0 & 1 & 0.0\\\\\n",
        "\t United States & USA & 1.7369582 & 7/1/2006 & 2006 & 2006 &  5 & 10 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1.0\\\\\n",
        "\\end{tabular}\n"
       ],
@@ -314,13 +314,13 @@
        "\n",
        "A tibble: 6 × 16\n",
        "\n",
-       "| COUNTRYNEW &lt;chr&gt; | COUNTRY_ISO3 &lt;chr&gt; | WGT &lt;dbl&gt; | FIELD_DATE &lt;chr&gt; | YEAR_WAVE &lt;int&gt; | YEAR_CALENDAR &lt;int&gt; | ls &lt;int&gt; | hope &lt;int&gt; | smile &lt;int&gt; | enjoy &lt;int&gt; | worry &lt;int&gt; | sad &lt;int&gt; | stress &lt;int&gt; | anger &lt;int&gt; | pa &lt;dbl&gt; | na &lt;dbl&gt; |\n",
+       "| COUNTRYNEW &lt;chr&gt; | COUNTRY_ISO3 &lt;chr&gt; | WGT &lt;dbl&gt; | FIELD_DATE &lt;chr&gt; | YEAR_WAVE &lt;int&gt; | YEAR_CALENDAR &lt;int&gt; | ls &lt;int&gt; | hope &lt;int&gt; | smile &lt;dbl&gt; | enjoy &lt;dbl&gt; | worry &lt;dbl&gt; | sad &lt;dbl&gt; | stress &lt;dbl&gt; | anger &lt;dbl&gt; | pa &lt;dbl&gt; | na &lt;dbl&gt; |\n",
        "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
-       "| United States | USA | 0.6689163 | 7/1/2006 | 2006 | 2006 |  6 |  8 | 1 | 1 | 2 | 2 | 2 | 2 | 1 | 2.0 |\n",
-       "| United States | USA | 0.1966555 | 7/1/2006 | 2006 | 2006 |  8 | NA | 1 | 1 | 2 | 2 | 2 | 2 | 1 | 2.0 |\n",
-       "| United States | USA | 1.3032635 | 7/1/2006 | 2006 | 2006 |  8 |  8 | 1 | 1 | 1 | 2 | 1 | 2 | 1 | 1.5 |\n",
-       "| United States | USA | 0.6359364 | 7/1/2006 | 2006 | 2006 |  8 |  8 | 1 | 1 | 2 | 2 | 2 | 2 | 1 | 2.0 |\n",
-       "| United States | USA | 0.7358092 | 7/1/2006 | 2006 | 2006 | 10 | 10 | 1 | 1 | 2 | 2 | 2 | 2 | 1 | 2.0 |\n",
+       "| United States | USA | 0.6689163 | 7/1/2006 | 2006 | 2006 |  6 |  8 | 1 | 1 | 0 | 0 | 0 | 0 | 1 | 0.0 |\n",
+       "| United States | USA | 0.1966555 | 7/1/2006 | 2006 | 2006 |  8 | NA | 1 | 1 | 0 | 0 | 0 | 0 | 1 | 0.0 |\n",
+       "| United States | USA | 1.3032635 | 7/1/2006 | 2006 | 2006 |  8 |  8 | 1 | 1 | 1 | 0 | 1 | 0 | 1 | 0.5 |\n",
+       "| United States | USA | 0.6359364 | 7/1/2006 | 2006 | 2006 |  8 |  8 | 1 | 1 | 0 | 0 | 0 | 0 | 1 | 0.0 |\n",
+       "| United States | USA | 0.7358092 | 7/1/2006 | 2006 | 2006 | 10 | 10 | 1 | 1 | 0 | 0 | 0 | 0 | 1 | 0.0 |\n",
        "| United States | USA | 1.7369582 | 7/1/2006 | 2006 | 2006 |  5 | 10 | 1 | 1 | 1 | 1 | 1 | 1 | 1 | 1.0 |\n",
        "\n"
       ],
@@ -333,11 +333,11 @@
        "5 United States USA          0.7358092 7/1/2006   2006      2006          10\n",
        "6 United States USA          1.7369582 7/1/2006   2006      2006           5\n",
        "  hope smile enjoy worry sad stress anger pa na \n",
-       "1  8   1     1     2     2   2      2     1  2.0\n",
-       "2 NA   1     1     2     2   2      2     1  2.0\n",
-       "3  8   1     1     1     2   1      2     1  1.5\n",
-       "4  8   1     1     2     2   2      2     1  2.0\n",
-       "5 10   1     1     2     2   2      2     1  2.0\n",
+       "1  8   1     1     0     0   0      0     1  0.0\n",
+       "2 NA   1     1     0     0   0      0     1  0.0\n",
+       "3  8   1     1     1     0   1      0     1  0.5\n",
+       "4  8   1     1     0     0   0      0     1  0.0\n",
+       "5 10   1     1     0     0   0      0     1  0.0\n",
        "6 10   1     1     1     1   1      1     1  1.0"
       ]
      },
@@ -352,12 +352,12 @@
     "#hope\n",
     "gallupAssas$hope <- na_codes(gallupAssas$hope, 98, 99)\n",
     "#pa and #na\n",
-    "gallupAssas$smile <- na_codes(gallupAssas$smile, 3, 4)\n",
-    "gallupAssas$enjoy <- na_codes(gallupAssas$enjoy, 3, 4)\n",
-    "gallupAssas$worry <- na_codes(gallupAssas$worry, 3, 4)\n",
-    "gallupAssas$sad <- na_codes(gallupAssas$sad, 3, 4)\n",
-    "gallupAssas$stress <- na_codes(gallupAssas$stress, 3, 4)\n",
-    "gallupAssas$anger <- na_codes(gallupAssas$anger, 3, 4)\n",
+    "gallupAssas$smile <- 2 - na_codes(gallupAssas$smile, 3, 4)\n",
+    "gallupAssas$enjoy <- 2 - na_codes(gallupAssas$enjoy, 3, 4)\n",
+    "gallupAssas$worry <- 2 - na_codes(gallupAssas$worry, 3, 4)\n",
+    "gallupAssas$sad <- 2 - na_codes(gallupAssas$sad, 3, 4)\n",
+    "gallupAssas$stress <- 2 - na_codes(gallupAssas$stress, 3, 4)\n",
+    "gallupAssas$anger <- 2 - na_codes(gallupAssas$anger, 3, 4)\n",
     "gallupAssas <- gallupAssas %>% \n",
     " rowwise() %>% \n",
     " mutate(pa = mean(cbind(enjoy, smile), na.rm=TRUE),\n",
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
