Added a new variable (WP4.INTERVIEWDATE)

--- a/GallupDataCleaning.ipynb
+++ b/GallupDataCleaning.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -134,21 +134,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gallupExtracted <- gallupRaw %>% select(COUNTRYNEW, COUNTRY_ISO3, WGT, FIELD_DATE, \n",
-    "                                        YEAR_WAVE, YEAR_CALENDAR, ls = WP16, \n",
-    "                                        hope = WP18, smile = WP63, enjoy = WP67, \n",
-    "                                        worry = WP69, sad = WP70, stress = WP71,\n",
-    "                                        anger = WP74)\n",
+    "gallupExtracted <- gallupRaw %>% select(COUNTRYNEW, COUNTRY_ISO3, WGT, \n",
+    "                                        FIELD_DATE, WP4.INTERVIEWDATE = WP4, YEAR_WAVE, \n",
+    "                                        YEAR_CALENDAR, ls = WP16, hope = WP18, \n",
+    "                                        smile = WP63, enjoy = WP67, worry = WP69, \n",
+    "                                        sad = WP70, stress = WP71, anger = WP74)\n",
     "write.csv(gallupExtracted, \"gallupExtracted.csv\", row.names = FALSE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        ".list-inline>li {display: inline-block}\n",
        ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
        "</style>\n",
-       "<ol class=list-inline><li>'COUNTRYNEW'</li><li>'COUNTRY_ISO3'</li><li>'WGT'</li><li>'FIELD_DATE'</li><li>'YEAR_WAVE'</li><li>'YEAR_CALENDAR'</li><li>'ls'</li><li>'hope'</li><li>'smile'</li><li>'enjoy'</li><li>'worry'</li><li>'sad'</li><li>'stress'</li><li>'anger'</li></ol>\n"
+       "<ol class=list-inline><li>'COUNTRYNEW'</li><li>'COUNTRY_ISO3'</li><li>'WGT'</li><li>'FIELD_DATE'</li><li>'WP4.INTERVIEWDATE'</li><li>'YEAR_WAVE'</li><li>'YEAR_CALENDAR'</li><li>'ls'</li><li>'hope'</li><li>'smile'</li><li>'enjoy'</li><li>'worry'</li><li>'sad'</li><li>'stress'</li><li>'anger'</li></ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
@@ -167,6 +167,7 @@
        "\\item 'COUNTRY\\_ISO3'\n",
        "\\item 'WGT'\n",
        "\\item 'FIELD\\_DATE'\n",
+       "\\item 'WP4.INTERVIEWDATE'\n",
        "\\item 'YEAR\\_WAVE'\n",
        "\\item 'YEAR\\_CALENDAR'\n",
        "\\item 'ls'\n",
@@ -184,24 +185,26 @@
        "2. 'COUNTRY_ISO3'\n",
        "3. 'WGT'\n",
        "4. 'FIELD_DATE'\n",
-       "5. 'YEAR_WAVE'\n",
-       "6. 'YEAR_CALENDAR'\n",
-       "7. 'ls'\n",
-       "8. 'hope'\n",
-       "9. 'smile'\n",
-       "10. 'enjoy'\n",
-       "11. 'worry'\n",
-       "12. 'sad'\n",
-       "13. 'stress'\n",
-       "14. 'anger'\n",
+       "5. 'WP4.INTERVIEWDATE'\n",
+       "6. 'YEAR_WAVE'\n",
+       "7. 'YEAR_CALENDAR'\n",
+       "8. 'ls'\n",
+       "9. 'hope'\n",
+       "10. 'smile'\n",
+       "11. 'enjoy'\n",
+       "12. 'worry'\n",
+       "13. 'sad'\n",
+       "14. 'stress'\n",
+       "15. 'anger'\n",
        "\n",
        "\n"
       ],
       "text/plain": [
-       " [1] \"COUNTRYNEW\"    \"COUNTRY_ISO3\"  \"WGT\"           \"FIELD_DATE\"   \n",
-       " [5] \"YEAR_WAVE\"     \"YEAR_CALENDAR\" \"ls\"            \"hope\"         \n",
-       " [9] \"smile\"         \"enjoy\"         \"worry\"         \"sad\"          \n",
-       "[13] \"stress\"        \"anger\"        "
+       " [1] \"COUNTRYNEW\"        \"COUNTRY_ISO3\"      \"WGT\"              \n",
+       " [4] \"FIELD_DATE\"        \"WP4.INTERVIEWDATE\" \"YEAR_WAVE\"        \n",
+       " [7] \"YEAR_CALENDAR\"     \"ls\"                \"hope\"             \n",
+       "[10] \"smile\"             \"enjoy\"             \"worry\"            \n",
+       "[13] \"sad\"               \"stress\"            \"anger\"            "
       ]
      },
      "metadata": {},
@@ -215,22 +218,22 @@
        ".list-inline>li {display: inline-block}\n",
        ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
        "</style>\n",
-       "<ol class=list-inline><li>2450403</li><li>14</li></ol>\n"
+       "<ol class=list-inline><li>2450403</li><li>15</li></ol>\n"
       ],
       "text/latex": [
        "\\begin{enumerate*}\n",
        "\\item 2450403\n",
-       "\\item 14\n",
+       "\\item 15\n",
        "\\end{enumerate*}\n"
       ],
       "text/markdown": [
        "1. 2450403\n",
-       "2. 14\n",
+       "2. 15\n",
        "\n",
        "\n"
       ],
       "text/plain": [
-       "[1] 2450403      14"
+       "[1] 2450403      15"
       ]
      },
      "metadata": {},
@@ -252,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,79 +277,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 6 × 16</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>COUNTRYNEW</th><th scope=col>COUNTRY_ISO3</th><th scope=col>WGT</th><th scope=col>FIELD_DATE</th><th scope=col>YEAR_WAVE</th><th scope=col>YEAR_CALENDAR</th><th scope=col>ls</th><th scope=col>hope</th><th scope=col>smile</th><th scope=col>enjoy</th><th scope=col>worry</th><th scope=col>sad</th><th scope=col>stress</th><th scope=col>anger</th><th scope=col>pa</th><th scope=col>na</th></tr>\n",
-       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>United States</td><td>USA</td><td>0.6689163</td><td>7/1/2006</td><td>2006</td><td>2006</td><td> 6</td><td> 8</td><td>1</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0.0</td></tr>\n",
-       "\t<tr><td>United States</td><td>USA</td><td>0.1966555</td><td>7/1/2006</td><td>2006</td><td>2006</td><td> 8</td><td>NA</td><td>1</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0.0</td></tr>\n",
-       "\t<tr><td>United States</td><td>USA</td><td>1.3032635</td><td>7/1/2006</td><td>2006</td><td>2006</td><td> 8</td><td> 8</td><td>1</td><td>1</td><td>1</td><td>0</td><td>1</td><td>0</td><td>1</td><td>0.5</td></tr>\n",
-       "\t<tr><td>United States</td><td>USA</td><td>0.6359364</td><td>7/1/2006</td><td>2006</td><td>2006</td><td> 8</td><td> 8</td><td>1</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0.0</td></tr>\n",
-       "\t<tr><td>United States</td><td>USA</td><td>0.7358092</td><td>7/1/2006</td><td>2006</td><td>2006</td><td>10</td><td>10</td><td>1</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0.0</td></tr>\n",
-       "\t<tr><td>United States</td><td>USA</td><td>1.7369582</td><td>7/1/2006</td><td>2006</td><td>2006</td><td> 5</td><td>10</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1</td><td>1.0</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A tibble: 6 × 16\n",
-       "\\begin{tabular}{llllllllllllllll}\n",
-       " COUNTRYNEW & COUNTRY\\_ISO3 & WGT & FIELD\\_DATE & YEAR\\_WAVE & YEAR\\_CALENDAR & ls & hope & smile & enjoy & worry & sad & stress & anger & pa & na\\\\\n",
-       " <chr> & <chr> & <dbl> & <chr> & <int> & <int> & <int> & <int> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
-       "\\hline\n",
-       "\t United States & USA & 0.6689163 & 7/1/2006 & 2006 & 2006 &  6 &  8 & 1 & 1 & 0 & 0 & 0 & 0 & 1 & 0.0\\\\\n",
-       "\t United States & USA & 0.1966555 & 7/1/2006 & 2006 & 2006 &  8 & NA & 1 & 1 & 0 & 0 & 0 & 0 & 1 & 0.0\\\\\n",
-       "\t United States & USA & 1.3032635 & 7/1/2006 & 2006 & 2006 &  8 &  8 & 1 & 1 & 1 & 0 & 1 & 0 & 1 & 0.5\\\\\n",
-       "\t United States & USA & 0.6359364 & 7/1/2006 & 2006 & 2006 &  8 &  8 & 1 & 1 & 0 & 0 & 0 & 0 & 1 & 0.0\\\\\n",
-       "\t United States & USA & 0.7358092 & 7/1/2006 & 2006 & 2006 & 10 & 10 & 1 & 1 & 0 & 0 & 0 & 0 & 1 & 0.0\\\\\n",
-       "\t United States & USA & 1.7369582 & 7/1/2006 & 2006 & 2006 &  5 & 10 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1.0\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A tibble: 6 × 16\n",
-       "\n",
-       "| COUNTRYNEW &lt;chr&gt; | COUNTRY_ISO3 &lt;chr&gt; | WGT &lt;dbl&gt; | FIELD_DATE &lt;chr&gt; | YEAR_WAVE &lt;int&gt; | YEAR_CALENDAR &lt;int&gt; | ls &lt;int&gt; | hope &lt;int&gt; | smile &lt;dbl&gt; | enjoy &lt;dbl&gt; | worry &lt;dbl&gt; | sad &lt;dbl&gt; | stress &lt;dbl&gt; | anger &lt;dbl&gt; | pa &lt;dbl&gt; | na &lt;dbl&gt; |\n",
-       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
-       "| United States | USA | 0.6689163 | 7/1/2006 | 2006 | 2006 |  6 |  8 | 1 | 1 | 0 | 0 | 0 | 0 | 1 | 0.0 |\n",
-       "| United States | USA | 0.1966555 | 7/1/2006 | 2006 | 2006 |  8 | NA | 1 | 1 | 0 | 0 | 0 | 0 | 1 | 0.0 |\n",
-       "| United States | USA | 1.3032635 | 7/1/2006 | 2006 | 2006 |  8 |  8 | 1 | 1 | 1 | 0 | 1 | 0 | 1 | 0.5 |\n",
-       "| United States | USA | 0.6359364 | 7/1/2006 | 2006 | 2006 |  8 |  8 | 1 | 1 | 0 | 0 | 0 | 0 | 1 | 0.0 |\n",
-       "| United States | USA | 0.7358092 | 7/1/2006 | 2006 | 2006 | 10 | 10 | 1 | 1 | 0 | 0 | 0 | 0 | 1 | 0.0 |\n",
-       "| United States | USA | 1.7369582 | 7/1/2006 | 2006 | 2006 |  5 | 10 | 1 | 1 | 1 | 1 | 1 | 1 | 1 | 1.0 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  COUNTRYNEW    COUNTRY_ISO3 WGT       FIELD_DATE YEAR_WAVE YEAR_CALENDAR ls\n",
-       "1 United States USA          0.6689163 7/1/2006   2006      2006           6\n",
-       "2 United States USA          0.1966555 7/1/2006   2006      2006           8\n",
-       "3 United States USA          1.3032635 7/1/2006   2006      2006           8\n",
-       "4 United States USA          0.6359364 7/1/2006   2006      2006           8\n",
-       "5 United States USA          0.7358092 7/1/2006   2006      2006          10\n",
-       "6 United States USA          1.7369582 7/1/2006   2006      2006           5\n",
-       "  hope smile enjoy worry sad stress anger pa na \n",
-       "1  8   1     1     0     0   0      0     1  0.0\n",
-       "2 NA   1     1     0     0   0      0     1  0.0\n",
-       "3  8   1     1     1     0   1      0     1  0.5\n",
-       "4  8   1     1     0     0   0      0     1  0.0\n",
-       "5 10   1     1     0     0   0      0     1  0.0\n",
-       "6 10   1     1     1     1   1      1     1  1.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gallupAssas <- gallupExtracted\n",
+    "#convert empty WP4.INTERVIEWDATE to NA\n",
+    "gallupAssas <- gallupAssas %>% mutate(WP4.INTERVIEWDATE = na_if(WP4.INTERVIEWDATE, \"\")) \n",
     "#life satisfication\n",
     "gallupAssas$ls <- na_codes(gallupAssas$ls, 98, 99)\n",
     "#hope\n",
@@ -367,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,110 +313,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".list-inline {list-style: none; margin:0; padding: 0}\n",
-       ".list-inline>li {display: inline-block}\n",
-       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
-       "</style>\n",
-       "<ol class=list-inline><li>'COUNTRYNEW'</li><li>'COUNTRY_ISO3'</li><li>'WGT'</li><li>'FIELD_DATE'</li><li>'YEAR_WAVE'</li><li>'YEAR_CALENDAR'</li><li>'ls'</li><li>'hope'</li><li>'smile'</li><li>'enjoy'</li><li>'worry'</li><li>'sad'</li><li>'stress'</li><li>'anger'</li><li>'pa'</li><li>'na'</li></ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 'COUNTRYNEW'\n",
-       "\\item 'COUNTRY\\_ISO3'\n",
-       "\\item 'WGT'\n",
-       "\\item 'FIELD\\_DATE'\n",
-       "\\item 'YEAR\\_WAVE'\n",
-       "\\item 'YEAR\\_CALENDAR'\n",
-       "\\item 'ls'\n",
-       "\\item 'hope'\n",
-       "\\item 'smile'\n",
-       "\\item 'enjoy'\n",
-       "\\item 'worry'\n",
-       "\\item 'sad'\n",
-       "\\item 'stress'\n",
-       "\\item 'anger'\n",
-       "\\item 'pa'\n",
-       "\\item 'na'\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 'COUNTRYNEW'\n",
-       "2. 'COUNTRY_ISO3'\n",
-       "3. 'WGT'\n",
-       "4. 'FIELD_DATE'\n",
-       "5. 'YEAR_WAVE'\n",
-       "6. 'YEAR_CALENDAR'\n",
-       "7. 'ls'\n",
-       "8. 'hope'\n",
-       "9. 'smile'\n",
-       "10. 'enjoy'\n",
-       "11. 'worry'\n",
-       "12. 'sad'\n",
-       "13. 'stress'\n",
-       "14. 'anger'\n",
-       "15. 'pa'\n",
-       "16. 'na'\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       " [1] \"COUNTRYNEW\"    \"COUNTRY_ISO3\"  \"WGT\"           \"FIELD_DATE\"   \n",
-       " [5] \"YEAR_WAVE\"     \"YEAR_CALENDAR\" \"ls\"            \"hope\"         \n",
-       " [9] \"smile\"         \"enjoy\"         \"worry\"         \"sad\"          \n",
-       "[13] \"stress\"        \"anger\"         \"pa\"            \"na\"           "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       ".list-inline {list-style: none; margin:0; padding: 0}\n",
-       ".list-inline>li {display: inline-block}\n",
-       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
-       "</style>\n",
-       "<ol class=list-inline><li>2450403</li><li>16</li></ol>\n"
-      ],
-      "text/latex": [
-       "\\begin{enumerate*}\n",
-       "\\item 2450403\n",
-       "\\item 16\n",
-       "\\end{enumerate*}\n"
-      ],
-      "text/markdown": [
-       "1. 2450403\n",
-       "2. 16\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "[1] 2450403      16"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "colnames(gallupAssas)\n",
     "dim(gallupAssas)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
