Added explanation for ["code low" and "code high"]
Added explanation for ["code low" and "code high"] in Liberal democracy index data

--- a/GDPandLDI.ipynb
+++ b/GDPandLDI.ipynb
@@ -107,7 +107,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import the GDP PPP per capita (from https://data.worldbank.org/indicator/NY.GDP.PCAP.PP.CD) and democracy (the liberal democracy index from v-dem) data."
+    "Import the GDP PPP per capita (from https://data.worldbank.org/indicator/NY.GDP.PCAP.PP.CD) and democracy (the liberal democracy index from v-dem) data.\n",
+    "\n",
+    "For the liberal democracy index,\n",
+    "- v2x_libdem: To what extent is the ideal of liberal democracy achieved\n",
+    "    - Scale: Interval, from low to high (0-1)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
