Just fixed a format problem in the explanation

--- a/GDPandLDI.ipynb
+++ b/GDPandLDI.ipynb
@@ -110,9 +110,11 @@
     "Import the GDP PPP per capita (from https://data.worldbank.org/indicator/NY.GDP.PCAP.PP.CD) and democracy (the liberal democracy index from v-dem) data.\n",
     "\n",
     "For the liberal democracy index,\n",
+    "\n",
     "- v2x_libdem: To what extent is the ideal of liberal democracy achieved\n",
     "    - Scale: Interval, from low to high (0-1)\n",
-    "\n",
+    "    \n",
+    "- \"codelow\" and \"codehigh\": These two kinds of variables [\"code low\" and \"code high\"] demarcate the interval in which the measurement model places 68 percent of the probability mass for each country-year score, which is approximately equivalent to one standard deviation upper and lower bounds.\n",
     "\n",
     "\n"
    ]
