--- a/GallupDataCleaning.ipynb
+++ b/GallupDataCleaning.ipynb
@@ -943,7 +943,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "write.csv(gallupAssas2, \"gallupAssas.csv\")"
+    "write.csv(gallupAssas2, \"gallupAssas.csv\", row.names = FALSE)"
    ]
   },
   {
