--- a/Descriptive Statistics.ipynb
+++ b/Descriptive Statistics.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Descriptive Statistics for Assassination Project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Preparation"
    ]
   },
